# grog

./: CMakeLists.txt
include/grog/ui/: app-cocoa.h  app-sdl.h  app.h  cocoa.h  color.h  draw-gl.h  draw-sdl.h  draw.h  euclidean.h  event-sdl.h  event.h  layout.h  mouse.h  widget.h
include/grog/util/: error.h  exception.h  lang.h  platform.h
src/ui/: app-cocoa.mm  app-sdl.cc  app.cc  cocoa.mm  color.cc  draw-gl.cc  draw-sdl.cc  draw.cc  event-sdl.cc  event.cc  layout.cc  main.cc  mouse.cc  widget.cc
test/ui/: draw.cc
